@@ -1,7 +1,9 @@
 package ru.job4j.collite;
 
+
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -10,28 +12,28 @@ class DepartmentsTest {
 
     @Test
     void whenMissed() {
-        List<String> input = List.of("k1/sk1", "k2/sk1");
-        List<String> expected = List.of("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
+        List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
 
     @Test
     void whenNonChange() {
-        List<String> input = List.of("k1", "k1/sk1");
-        List<String> expected = List.of("k1", "k1/sk1");
+        List<String> input = Arrays.asList("k1", "k1/sk1");
+        List<String> expected = Arrays.asList("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
 
     @Test
     void whenMissedSomeDepartmentsCode() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -46,7 +48,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortAscWithoutMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -57,7 +59,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -74,7 +76,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortAscWithMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1",
@@ -82,7 +84,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -96,7 +98,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortDescWithoutMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -107,16 +109,16 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
-                "K2",
-                "K2/SK1",
-                "K2/SK1/SSK1",
+        List<String> expected = Arrays.asList(
                 "K2/SK1/SSK2",
-                "K1",
-                "K1/SK1",
-                "K1/SK1/SSK1",
+                "K2/SK1/SSK1",
+                "K2/SK1",
+                "K2",
+                "K1/SK2",
                 "K1/SK1/SSK2",
-                "K1/SK2"
+                "K1/SK1/SSK1",
+                "K1/SK1",
+                "K1"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
@@ -124,7 +126,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortDescWithMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -133,14 +135,14 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
-                "K2/SK1",
-                "K2/SK1/SSK1",
+        List<String> expected = Arrays.asList(
                 "K2/SK1/SSK2",
-                "K1/SK1",
-                "K1/SK1/SSK1",
+                "K2/SK1/SSK1",
+                "K2/SK1",
+                "K1/SK2",
                 "K1/SK1/SSK2",
-                "K1/SK2"
+                "K1/SK1/SSK1",
+                "K1/SK1"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
